Mon Aug 09 11:53:18 1999  Gonzalo A. Diethelm  <Gonzalo.Diethelm@jda.cl>

	* source/Makefile: 
	Moved the debug directory after rdd.
	
	* source/hbpp/hbpp.c: 
	* source/rtl/filesys.c: 
	* source/runner/runner.c: 
	Got rid of several warnings.

199908.09-15:24 GMT+3 Alexander Kresin
  * source/hbpp/hbpp.c
    * fixed problem with new DATA implementation

19990809-12:20 GMT+2 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
	* restored all code related to debugger
	* fixed alias expressions in '=' statement

199908.09-13:12 GMT+3 Alexander Kresin
  * source/hbpp/hbpp.c
    * added support for list match patterns

19990809-03:47 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/compiler/harbour.l
     + added DECLARE statement - treated as PRIVATE
       (Don't recall the exact rules for DECLARE)

19990809-03:23 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/filesys.c"source/rtl/filesys" 
     * hb_fsLock implimented for msvc

19990809-07:40 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/odbc moved to contrib/odbc
   * source/rtl/console.c
     + #include "io.h" added for __CYGWIN__
   * tests/working/block2.PRG removed.
   * tests/working/transdef.prg
     tests/working/testrdd.prg
     tests/working/testpre.prg
     tests/working/testdbf.prg
     tests/working/strsub.prg
     tests/working/dates4.prg
     ! CVS tag added.
   * source/rtl/mtran.c
     ! Small typo.

19990809-06:23 GMT+1 Victor Szel <info@szelvesz.hu>
   * include/memvars.ch
     ! #ifdef _MEMVARS_CH guard added.
     ! Changed all comments to ANSI C style, since it's included in C code, too.
   * source/rtl/errorapi.c
     + Fixed logic for _errLaunch(), it seem ready now, plus highly
       Clipper compatible.
   * source/Makefile
     + runner added.
   * source/odbc/odbc.c
     ! Small typo fixed.
   * source/rtl/menuto.prg
     + Handles non-declared variables correctly. Uses __MVSCOPE().
   * include/hbdefs.h
     * Small cleanup, typo fix.